@@ -4,7 +4,8 @@ import ch.admin.bj.swiyu.core.trust.client.api.TrustProtocol20Api;
 import ch.admin.bj.swiyu.core.trust.client.model.PagedModelString;
 import ch.admin.bj.swiyu.issuer.common.config.SwiyuProperties;
 import ch.admin.bj.swiyu.issuer.service.enc.CacheMaintenanceService;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import ch.admin.bj.swiyu.issuer.service.trustregistry.TrustStatementValidator.TrustStatementValidationResult;
+
 import com.nimbusds.jose.JOSEObjectType;
 import com.nimbusds.jose.JWSAlgorithm;
 import com.nimbusds.jose.JWSHeader;
@@ -16,13 +17,14 @@ import com.nimbusds.jwt.JWTClaimsSet;
 import com.nimbusds.jwt.SignedJWT;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.springframework.web.reactive.function.client.WebClientResponseException;
 import reactor.core.publisher.Mono;
 
-import java.net.URL;
+import java.net.URI;
 import java.time.Instant;
 import java.util.Date;
 import java.util.List;
-import java.util.Optional;
+import java.util.concurrent.TimeUnit;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.*;
@@ -52,6 +54,7 @@ class TrustStatementCacheServiceTest {
 
     private TrustProtocol20Api trustProtocol20Api;
     private CacheMaintenanceService cacheMaintenanceService;
+    private TrustStatementValidator validator;
     private TrustStatementCacheService service;
 
     /**
@@ -85,21 +88,18 @@ class TrustStatementCacheServiceTest {
     void setUp() throws Exception {
         trustProtocol20Api = mock(TrustProtocol20Api.class);
         cacheMaintenanceService = mock(CacheMaintenanceService.class);
-        service = buildService(5L);
-    }
-
-    private TrustStatementCacheService buildService(Long maxCacheTtlSeconds) throws Exception {
-        var trustRegistry = new SwiyuProperties.TrustRegistryProperties(
-                new URL("https://trust-reg.example.ch/"),
-                "key",
-                "secret",
-                1_000,
-                60,
-                maxCacheTtlSeconds);
+            var trustRegistry = new SwiyuProperties.TrustRegistryProperties(
+                URI.create("https://trust-reg.example.ch/").toURL(),
+                1_000l,
+                60l,
+                5l,
+            60l);
         var props = mock(SwiyuProperties.class);
         when(props.trustRegistry()).thenReturn(trustRegistry);
+        validator = mock(TrustStatementValidator.class);
         // No TrustStatementValidator – signature validation is skipped in unit tests
-        return new TrustStatementCacheService(trustProtocol20Api, props, Optional.empty(), cacheMaintenanceService);
+        service = new TrustStatementCacheService(trustProtocol20Api, props, validator, cacheMaintenanceService);
+        when(validator.trustStatementValidityWindow(anyString())).thenReturn(new TrustStatementValidationResult(true, TimeUnit.SECONDS.toNanos(5l)));
     }
 
     // -------------------------------------------------------------------------
@@ -111,7 +111,6 @@ class TrustStatementCacheServiceTest {
         var jwt = buildJwt(Instant.now().plusSeconds(3600).getEpochSecond());
         when(trustProtocol20Api.getIdTS(eq(ISSUER_DID)))
                 .thenReturn(Mono.just(jwt));
-
         var result = service.getIdentityTrustStatement(ISSUER_DID);
 
         assertThat(result).isEqualTo(jwt);
@@ -129,6 +128,20 @@ class TrustStatementCacheServiceTest {
 
         // API must only be called once – second call hits the cache
         verify(trustProtocol20Api, times(1)).getIdTS(any());
+    }
+
+    @Test
+    void getIdentityTrustStatement_secondCallWhen503_cacheIsNotUsed() {
+        var numberOfCalls = 2;
+        when(trustProtocol20Api.getIdTS(any()))
+                .thenReturn(Mono.error(WebClientResponseException.create(503, "Service Unavailable", null, null, null)));
+
+        for (int i = 0; i < numberOfCalls; i++) {
+            service.getIdentityTrustStatement(ISSUER_DID);
+        }
+
+        // API must only be called once – second call hits the cache
+        verify(trustProtocol20Api, times(numberOfCalls)).getIdTS(any());
     }
 
     // -------------------------------------------------------------------------
@@ -169,6 +182,32 @@ class TrustStatementCacheServiceTest {
         var result = service.getAllProtectedIssuanceAuthorizationTrustStatements(ISSUER_DID);
 
         assertThat(result).containsExactly(jwt1, jwt2);
+        verify(trustProtocol20Api, times(1)).listPiaTS(any(), any(), any(), any(), any());
+    }
+
+    @Test
+    void getAllProtectedIssuanceAuthorizationTrustStatements_secondCallWhen503_cacheIsNotUsed() {
+        var numberOfCalls = 2;
+        when(trustProtocol20Api.listPiaTS(eq(ISSUER_DID), eq(true), isNull(), isNull(), isNull()))
+                .thenReturn(Mono.error(WebClientResponseException.create(503, "Service Unavailable", null, null, null)));
+
+        for (int i = 0; i < numberOfCalls; i++) {
+            service.getAllProtectedIssuanceAuthorizationTrustStatements(ISSUER_DID);
+        }
+
+        verify(trustProtocol20Api, times(2)).listPiaTS(any(), any(), any(), any(), any());
+    }
+
+    @Test
+    void getAllProtectedIssuanceAuthorizationTrustStatements_whenEmptyListResponse_thenCached() {
+        var numberOfCalls = 2;
+        when(trustProtocol20Api.listPiaTS(eq(ISSUER_DID), eq(true), isNull(), isNull(), isNull()))
+                .thenReturn(Mono.just(pagedModel()));
+
+        for (int i = 0; i < numberOfCalls; i++) {
+            service.getAllProtectedIssuanceAuthorizationTrustStatements(ISSUER_DID);
+        }
+
         verify(trustProtocol20Api, times(1)).listPiaTS(any(), any(), any(), any(), any());
     }
 
@@ -284,8 +323,7 @@ class TrustStatementCacheServiceTest {
 
     @Test
     void getIdentityTrustStatement_withMaxCacheTtlCap_jwtIsReturnedCorrectly() throws Exception {
-        // JWT valid for 1 day, but cap is 10 seconds – cap only affects eviction, not the returned value
-        service = buildService(10L);
+        // JWT valid for 1 day, but cap is 5 seconds – cap only affects eviction, not the returned value
         var jwt = buildJwt(Instant.now().plusSeconds(86400).getEpochSecond());
         when(trustProtocol20Api.getIdTS(any()))
                 .thenReturn(Mono.just(jwt));
